--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -23,3 +23,8 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+
+//폰트 변수!!!
+@import "font.scss";
+$main-font: 'GmarketSans';
