--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary   : #3948aa;
+$secondary : #f1f2ff;
+$accent    :#7A88FF;
 
 $dark      : #1D1D1D;
 $dark-page : #121212;
